--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div id="map"></div>
 
   <!-- JavaScript file -->
-  <script type="text/javascript" src="Covid_data.js"></script>
+  <script type="text/javascript" src="Covid_data/Covid_data.js"></script>
 </body>
 
 </html>
