--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="Covid_data/style.css">
 
 </head>
 
